--- a/Onda Algo trading/Onda_Algo_trading.ipynb
+++ b/Onda Algo trading/Onda_Algo_trading.ipynb
@@ -131,7 +131,7 @@
     "Scope of improvement:\n",
     "1) Currently it's simple take target and Exit on SL logic can encode trailing stoploss logic\n",
     "\n",
-    "2) Also please let me know if there are other changes we can do to make our code more freindly and atomated.I'll finish it during   my deadline."
+    "2) Also create an issue if there are other changes we can do to make our code more freindly and atomated.I'll finish it during   my deadline."
    ]
   }
  ],
